discussion/kv_engine/186556/186556_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Support warmup of the legacy max DCP seqno

This commit adds code to set the default collection's legacy max
seqno when a warmup occurs.

The technique used here is to attach to each generated modify event
(modify of the default collection) the current in-memory value of the
legacy max DCP seqno. Warmup can then look for this value if there is
a modify of the default collection stored in the vbucket KVStore.

The code utilises xattrs to store this extra metadata in only the
default collection modify.

Change-Id: Ie930ba65b77eed1ec0137cca9c08cdb93cb8e985

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-10 17:18:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-10 17:18:57.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/337386/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-10 17:47:02.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1091/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/collections_types.h:370:47: warning: escaped string literal can be written as a raw string literal [modernize-raw-string-literal]
constexpr std::string_view LegacyJSONFormat = "{{\"max_seqno\":\"{}\"}}";
                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
                                              R"({{"max_seqno":"{}"}})"
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18: error: member access into incomplete type "KVStoreIface" [clang-diagnostic-error]
    auto gv = kvs.get(DiskDocKey{SystemEventFactory::makeCollectionEventKey(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.h:31:7: note: forward declaration of "KVStoreIface"
class KVStoreIface;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1126:29: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    auto legacy = nlohmann::json::parse(value.begin(), value.end());
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1091/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18:
error: member access into incomplete type "KVStoreIface" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1091/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1315/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc(1090): error C2027: use of undefined type "KVStoreIface" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1315/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1058/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18:
error: member access into incomplete type "KVStoreIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1058/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1115/ : FAILURE

Compile error at [2023-02-10T17:24:21.222Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1115/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1116/ : FAILURE

Compile error at [2023-02-10T17:27:28.728Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1116/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1117/ : FAILURE

Compile error at [2023-02-10T17:31:04.513Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1090:18:
error: member access into incomplete type "KVStoreIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1117/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22623/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1433/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1084/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1108/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1108/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
